--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "Biblioteca do curso de JS com TDD na prática.",
   "main": "index.js",
   "scripts": {
+    "lint": "./node_modules/.bin/eslint src/*.js",
+    "prepush": "npm run lint",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -20,5 +22,11 @@
   "bugs": {
     "url": "https://github.com/andreMCD/js-tdd-course/issues"
   },
-  "homepage": "https://github.com/andreMCD/js-tdd-course#readme"
+  "homepage": "https://github.com/andreMCD/js-tdd-course#readme",
+  "devDependencies": {
+    "eslint": "^6.3.0",
+    "eslint-config-airbnb-base": "^14.0.0",
+    "eslint-plugin-import": "^2.18.2",
+    "husky": "^3.0.5"
+  }
 }
